--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -14,9 +14,9 @@ body {
 .main-container {
     text-align: center;
     height: 100%;
-    background-color: #131313;
+    background-color: #1a1a1a;
     color: #f1f1f1;
-    padding: 15px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -39,27 +39,23 @@ body {
     width: 100%;
 }
 
-/* Анимация клика */
-.click-anim {
-    position: absolute;
-    pointer-events: none;
-    font-size: 30px;
-    color: #f1f1f1;
-    opacity: 0;
-    transition: opacity 0.5s, transform 0.5s;
-    transform: translate(-50%, -50%) scale(1);
+/* Очки */
+.score h2 {
+    font-size: 32px;
+    margin: 0;
+    margin-top: 25px;
 }
 
 /* Энергия */
 .energy {
     display: flex;
-    margin-top: 0;
+    margin-top: 10px;
     align-items: center;
     background-color: #343434;
     width: 90px;
     height: 45px;
     border-radius: 10px;
-    box-shadow: 1px 1px 0 #5a5a5ac2;
+    box-shadow: 1.4px 1.4px 0 #5a5a5ac2;
 }
 
 .energy img {
@@ -110,7 +106,7 @@ body {
 
 /* Полоса уровня и название */
 .profile-level {
-    margin-top: 2px;
+    margin-top: 5px;
     width: 150px;
     text-align: center;
 }
@@ -129,7 +125,7 @@ body {
 /* Прогресс уровня */
 .level-process {
     height: 100%;
-    background: linear-gradient(90deg, #3daa27 0%, #d1e81d 50%, #d68100 75%, #610000 100%); /* Градиентный фон прогресса */
+    background: linear-gradient(90deg, #26ba26 0%, #c8e014 50%, #d17e02 75%, #780404 100%); /* Градиентный фон прогресса */
     border-radius: 10px 0 0 10px;
     transition: width 1s ease; /* Плавное изменение ширины при изменении уровня */
 }
