--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -150,3 +150,20 @@ body {
     width: 70px;
     height: 70px;
 }
+
+.strip-page {
+    position: relative;
+    padding-bottom: 7px;
+}
+
+.strip-page::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px; /* Высота полосы */
+    background: #ba0000; /* Цвет полосы */
+    border-radius: 10px; /* Закругленные углы только снизу */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Тень для эффекта */
+}
