--- a/static/styles/tasks-style.css
+++ b/static/styles/tasks-style.css
@@ -1,19 +1,31 @@
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-container {
+    padding-top: 50px;
+}
+
 /* Создание прямоугольника для задания */
 .task {
     width: 300px;
     height: 80px;
-    border: 1px solid grey;
+    background-color: #282828;
+    border: 1px solid #989898;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
 }
 
 /* Логотип задания */
 .logo {
     width: 25%;
     height: 100%;
-    border-right: 1px solid grey;
+    border-right: 1px solid #989898;
     position: absolute;
     top: 0;
     left: 0;
@@ -29,7 +41,7 @@
 
 /* Название задания */
 .task-name {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #989898;
     top: 5%;
     left: 25%;
     width: 75%;
@@ -64,14 +76,16 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    background-color: #000000e3;
+    color: #ffffffe3;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    border-radius: 20px;
+    box-shadow: 0 0 12px #10101066;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.5s ease, transform 0.5s ease;
     z-index: 1000;
+    cursor: pointer;
 }
 
 /* Показ уведомления */
