--- a/static/styles/shop-style.css
+++ b/static/styles/shop-style.css
@@ -1,3 +1,4 @@
+/* Деньги */
 .score {
     display: flex;
     position: absolute;
@@ -14,6 +15,7 @@
     width: 40px;
 }
 
+/* Все товары */
 .items {
     margin-top: 55px;
     display: flex;
@@ -35,6 +37,7 @@
     box-shadow: 2px 2px 0 #7e7e7ed8;
 }
 
+/* Изображение товара */
 .item img {
     width: 80px;
     height: 60px;
@@ -44,6 +47,7 @@
     border-right: 1px solid #898989;
 }
 
+/* Название товара */
 .item-name {
     position: absolute;
     top: 0;
@@ -58,6 +62,7 @@
     border-bottom: 1px solid #898989;
 }
 
+/* Информация о товаре */
 .item-info {
     display: flex;
     flex-direction: column;
@@ -65,6 +70,7 @@
     height: 100%;
 }
 
+/* Описание товара */
 .item-description {
     position: absolute;
     width: 70px;
@@ -77,6 +83,7 @@
     border-bottom: 1px solid #898989;
 }
 
+/* Уровень и цена товара */
 .item-data {
     display: flex;
     justify-content: space-between;
