--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -209,3 +209,30 @@ body {
     border-radius: 10px;
     box-shadow: 0 2px 4px #00000033;
 }
+
+
+a:focus, a:active, button:focus, button:active {
+    outline: none;
+    background: transparent;
+    border: none;
+}
+
+/* Удаление фокуса и синего фона для изображений */
+img:focus, img:active {
+    outline: none;
+    border: none;
+}
+
+/* Переопределение поведения для кнопок и ссылок */
+button, a {
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+/* Устранение проблемы с изображениями */
+img {
+    -webkit-user-drag: none;
+    user-select: none;
+    pointer-events: none;
+}
